Closed
Bug 206344
Opened 22 years ago
Closed 22 years ago
trunk topcrash [@ nsAccessible::GetAccNextSibling]
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jcarpenter0524, Assigned: aaronlev)
Details
(Keywords: crash, topcrash)
Crash Data
Attachments
(1 file)
|
718 bytes,
patch
|
yuanyi21
:
review+
Henry.Jia
:
superreview+
asa
:
approval1.4+
|
Details | Diff | Splinter Review |
trunk topcrash [@ nsAccessible::GetAccNextSibling]
nsAccessible::GetAccNextSibling 7
Crash data range: 2003-05-17 to 2003-05-19
Build ID range: 2003051608 to 2003051904
Stack Trace:
nsAccessible::GetAccNextSibling
[c:/builds/seamonkey/mozilla/accessible/src/base/nsAccessible.cpp line 273]
nsAccessible::Shutdown
[c:/builds/seamonkey/mozilla/accessible/src/base/nsAccessible.cpp line 220]
nsHTMLComboboxAccessible::Shutdown
[c:/builds/seamonkey/mozilla/accessible/src/html/nsHTMLSelectAccessible.cpp
line 825]
nsDocAccessible::InvalidateCacheSubtree
[c:/builds/seamonkey/mozilla/accessible/src/base/nsDocAccessible.cpp line 887]
nsDocAccessible::HandleMutationEvent
[c:/builds/seamonkey/mozilla/accessible/src/base/nsDocAccessible.cpp line 981]
nsDocAccessible::NodeInserted
[c:/builds/seamonkey/mozilla/accessible/src/base/nsDocAccessible.cpp line 805]
nsEventListenerManager::HandleEvent
[c:/builds/seamonkey/mozilla/content/events/src/nsEventListenerManager.cpp line
2224]
nsDocument::HandleDOMEvent
[c:/builds/seamonkey/mozilla/content/base/src/nsDocument.cpp line 3620]
nsGenericElement::HandleDOMEvent
[c:/builds/seamonkey/mozilla/content/base/src/nsGenericElement.cpp line 1884]
nsGenericElement::HandleDOMEvent
[c:/builds/seamonkey/mozilla/content/base/src/nsGenericElement.cpp line 1877]
nsGenericElement::HandleDOMEvent
[c:/builds/seamonkey/mozilla/content/base/src/nsGenericElement.cpp line 1877]
nsGenericElement::HandleDOMEvent
[c:/builds/seamonkey/mozilla/content/base/src/nsGenericElement.cpp line 1877]
nsGenericElement::HandleDOMEvent
[c:/builds/seamonkey/mozilla/content/base/src/nsGenericElement.cpp line 1877]
nsGenericElement::HandleDOMEvent
[c:/builds/seamonkey/mozilla/content/base/src/nsGenericElement.cpp line 1877]
nsGenericElement::HandleDOMEvent
[c:/builds/seamonkey/mozilla/content/base/src/nsGenericElement.cpp line 1877]
nsGenericElement::HandleDOMEvent
[c:/builds/seamonkey/mozilla/content/base/src/nsGenericElement.cpp line 1877]
nsGenericElement::HandleDOMEvent
[c:/builds/seamonkey/mozilla/content/base/src/nsGenericElement.cpp line 1877]
nsGenericElement::HandleDOMEvent
[c:/builds/seamonkey/mozilla/content/base/src/nsGenericElement.cpp line 1877]
nsGenericElement::HandleDOMEvent
[c:/builds/seamonkey/mozilla/content/base/src/nsGenericElement.cpp line 1877]
nsHTMLFormElement::HandleDOMEvent
[c:/builds/seamonkey/mozilla/content/html/content/src/nsHTMLFormElement.cpp
line 736]
nsGenericElement::HandleDOMEvent
[c:/builds/seamonkey/mozilla/content/base/src/nsGenericElement.cpp line 1877]
nsGenericElement::HandleDOMEvent
[c:/builds/seamonkey/mozilla/content/base/src/nsGenericElement.cpp line 1877]
nsGenericElement::HandleDOMEvent
[c:/builds/seamonkey/mozilla/content/base/src/nsGenericElement.cpp line 1877]
nsGenericElement::HandleDOMEvent
[c:/builds/seamonkey/mozilla/content/base/src/nsGenericElement.cpp line 1877]
nsGenericElement::HandleDOMEvent
[c:/builds/seamonkey/mozilla/content/base/src/nsGenericElement.cpp line 1877]
nsGenericElement::HandleDOMEvent
[c:/builds/seamonkey/mozilla/content/base/src/nsGenericElement.cpp line 1877]
nsHTMLSelectElement::HandleDOMEvent
[c:/builds/seamonkey/mozilla/content/html/content/src/nsHTMLSelectElement.cpp
line 1953]
nsGenericElement::HandleDOMEvent
[c:/builds/seamonkey/mozilla/content/base/src/nsGenericElement.cpp line 1877]
nsGenericHTMLContainerElement::AppendChildTo
[c:/builds/seamonkey/mozilla/content/html/content/src/nsGenericHTMLElement.cpp
line 3770]
nsHTMLSelectElement::AppendChildTo
[c:/builds/seamonkey/mozilla/content/html/content/src/nsHTMLSelectElement.cpp
line 552]
SinkContext::CloseContainer
[c:/builds/seamonkey/mozilla/content/html/document/src/nsHTMLContentSink.cpp
line 1715]
HTMLContentSink::CloseContainer
[c:/builds/seamonkey/mozilla/content/html/document/src/nsHTMLContentSink.cpp
line 3537]
CNavDTD::CloseContainer
[c:/builds/seamonkey/mozilla/htmlparser/src/CNavDTD.cpp line 3460]
CNavDTD::CloseContainersTo
[c:/builds/seamonkey/mozilla/htmlparser/src/CNavDTD.cpp line 3492]
CNavDTD::CloseContainersTo
[c:/builds/seamonkey/mozilla/htmlparser/src/CNavDTD.cpp line 3678]
CNavDTD::HandleEndToken
[c:/builds/seamonkey/mozilla/htmlparser/src/CNavDTD.cpp line 2026]
CNavDTD::HandleToken [c:/builds/seamonkey/mozilla/htmlparser/src/CNavDTD.cpp
line 950]
CNavDTD::BuildModel [c:/builds/seamonkey/mozilla/htmlparser/src/CNavDTD.cpp
line 519]
nsParser::BuildModel [c:/builds/seamonkey/mozilla/htmlparser/src/nsParser.cpp
line 1903]
nsParser::ResumeParse [c:/builds/seamonkey/mozilla/htmlparser/src/nsParser.cpp
line 1767]
nsParser::ContinueParsing
[c:/builds/seamonkey/mozilla/htmlparser/src/nsParser.cpp line 1365]
nsParser::HandleParserContinueEvent
[c:/builds/seamonkey/mozilla/htmlparser/src/nsParser.cpp line 1427]
nsParserContinueEvent::HandleEvent
[c:/builds/seamonkey/mozilla/htmlparser/src/nsParser.cpp line 229]
PL_HandleEvent [c:/builds/seamonkey/mozilla/xpcom/threads/plevent.c line 660]
PL_ProcessPendingEvents [c:/builds/seamonkey/mozilla/xpcom/threads/plevent.c
line 596]
_md_TimerProc [c:/builds/seamonkey/mozilla/xpcom/threads/plevent.c line 961]
KERNEL32.DLL + 0x2317 (0xbff72317)
Source File : c:/builds/seamonkey/mozilla/accessible/src/base/nsAccessible.cpp
line : 273
(20237337) Comments: downloading & opening by double-click the same file
(20211397) Comments: Error message appeared when I closed browser by
clicking the "X" in the upper right corner
(guessing on the component...)
| Assignee | ||
Comment 1•22 years ago
|
||
| Assignee | ||
Updated•22 years ago
|
Attachment #123822 -
Flags: superreview?(Henry.Jia)
Attachment #123822 -
Flags: review?(kyle.yuan)
Comment on attachment 123822 [details] [diff] [review]
Make sure we never addref null
r=kyle
Attachment #123822 -
Flags: review?(kyle.yuan) → review+
Comment on attachment 123822 [details] [diff] [review]
Make sure we never addref null
sr=Henry
Attachment #123822 -
Flags: superreview?(Henry.Jia) → superreview+
| Assignee | ||
Updated•22 years ago
|
Attachment #123822 -
Flags: approval1.4?
Comment 4•22 years ago
|
||
Comment on attachment 123822 [details] [diff] [review]
Make sure we never addref null
a=asa (on behalf of drivers) for checkin to 1.4.
Attachment #123822 -
Flags: approval1.4? → approval1.4+
| Assignee | ||
Comment 5•22 years ago
|
||
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•14 years ago
|
Crash Signature: [@ nsAccessible::GetAccNextSibling]
You need to log in
before you can comment on or make changes to this bug.
Description
•