Bug 206344. Topcrash in nsAccessible::GetAccNextSibling, r=kyle, sr=henry.jia, a=asa