accessible/src/base/nsAccessible.cpp
@@ -269,8 +269,7 @@ NS_IMETHODIMP nsAccessible::GetAccNextSibling(nsIAccessible * *aAccNextSibling)
     // If no parent, don't try to calculate a new sibling
     // It either means we're at the root or shutting down the parent
     if (mNextSibling != DEAD_END_ACCESSIBLE) {
-      *aAccNextSibling = mNextSibling;
-      NS_ADDREF(*aAccNextSibling);
+      NS_IF_ADDREF(*aAccNextSibling = mNextSibling);
     }
     return NS_OK;
   }
